--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "system-stats",
-  "version": "1.0.0",
+  "name": "cyber-system-stats",
+  "version": "1.1.0",
   "description": "A little package that displays system information.",
   "main": "main.js",
+  "preferGlobal": true,
+  "bin": {
+    "systemstats": "main.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "CyberGen49",
   "license": "ISC",
   "dependencies": {
-    "cli-color": "^2.0.3"
+    "cli-color": "^2.0.3",
+    "dayjs": "^1.11.7",
+    "diskusage": "^1.1.3",
+    "web-resources": "^2.3.0"
   }
 }
