--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cyber-system-stats",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A little package that displays system information.",
   "main": "main.js",
   "preferGlobal": true,
@@ -17,5 +17,14 @@
     "dayjs": "^1.11.7",
     "diskusage": "^1.1.3",
     "web-resources": "^2.3.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CyberGen49/system-stats.git"
+  },
+  "bugs": {
+    "url": "https://github.com/CyberGen49/system-stats/issues"
+  },
+  "homepage": "https://github.com/CyberGen49/system-stats#readme"
 }
