--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cyber-system-stats",
-  "version": "1.1.2",
-  "description": "A little package that displays system information.",
+  "version": "1.2.0",
+  "description": "A little executable that displays system information.",
   "main": "main.js",
   "preferGlobal": true,
   "bin": {
@@ -16,9 +16,8 @@
     "cli-color": "^2.0.3",
     "dayjs": "^1.11.7",
     "diskusage": "^1.1.3",
-    "web-resources": "^2.3.0"
+    "yargs": "^17.7.2"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CyberGen49/system-stats.git"
